# permeable_bed

./: .gitignore  .xmf  CMakeCache.txt  CMakeLists.txt  CalcCd.m  CalcCd3.m  CalcCd3.m~  Collide.m  D3Q15_Minv_Code.txt  D3Q19_Matrix.txt  D3Q19_Matrix_Code.txt  D3Q19_Minv.txt  D3Q19_Minv_Code.txt  Makefile  Nodes.txt  Nodes_sc_10.txt  Nodes_sc_110.txt  Nodes_sc_30.txt  Nodes_sc_50.txt  Nodes_sc_70.txt  Nodes_sc_90.txt  Permeability_0_10_1.6.out  Permeability_0_110_1.6.out  Permeability_0_30_1.6.out  Permeability_0_50_1.6.out  Permeability_0_70_1.6.out  Permeability_0_90_1.6.out  Permeability_1_10_1.6.out  Permeability_1_70_1.6.out  Permeability_1_90_1.6.out  Permeability_2_10_1.6.out  Permeability_2_90_1.6.out  Permeability_3_10_1.6.out  Permeability_3_110_1.6.out  Permeability_3_30_1.6.out  Permeability_3_50_1.6.out  Permeability_3_70_1.6.out  Permeability_3_90_1.6.out  Permeability_4_10_1.6.out  Permeability_4_30_1.6.out  (+92 more)
.hg/: dirstate  last-message.txt  undo.backup.dirstate  undo.desc  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo
.hg/store/data/: _c_make_cache.txt.i  _c_make_lists.txt.i  _calc_cd.m.i  _calc_cd3.m.i  _calc_cd3.m~7e.i  _cd___l_i_b_b___m_r_t__100__0.8.out.i  _cd__gamma___m_r_t__100__0.6.out.i  _cd__gamma___m_r_t__100__0.8.out.i  _collide.m.i  _d3_q15___minv___code.txt.i  _d3_q19___matrix.txt.i  _d3_q19___matrix___code.txt.i  _d3_q19___minv.txt.i  _d3_q19___minv___code.txt.i  _makefile.i  _r_e_a_d_m_e.md.i  _use_m_e_c_h_s_y_s.cmake.i  cmake__install.cmake.i  get_data.m.i  permeability.out.i  read.m.i  showq.m.i  showq3.m.i  test__carve.i  test__carve2.cpp.i  test__carve2.i  test__carve3.cpp.i  test__carve3.i  test__cavity.cpp.i  test__cavity.i  test__cd__bb.cpp.i  test__cd__ga.cpp.i  test__pipeflow.i  test__sc__bb.cpp.i  test__sc__ga.cpp.i  ux.txt.i  uy.txt.i  ~2egitignore.i
.hg/store/data/_c_make_files/: _c_make_directory_information.cmake.i  _c_make_error.log.i  _c_make_output.log.i  _makefile.cmake.i  _makefile2.i  _target_directories.txt.i  cmake.check__cache.i  feature__tests.bin.i  feature__tests.c.i  feature__tests.cxx.i
.hg/store/data/_old_test/: test__bcc.cpp.i  test__carve2.cpp.i  test__carve3.cpp.i  test__cavity.cpp.i  test__cd__ga__mrt.cpp.i  test__pipeflow.cpp.i
.hg/store/data/lbm/: _add_solid_boundary.h.i  _apply_solid_boundary.h.i  _calc_props.h.i  _collide.h.i  _domain.h.i  _domain2.h.i  _feq.h.i  _initialize.h.i  _output.h.i  _stream.h.i
.hg/store/data/~2egit/: _c_o_m_m_i_t___e_d_i_t_m_s_g.i  _f_e_t_c_h___h_e_a_d.i  _h_e_a_d.i  _o_r_i_g___h_e_a_d.i  config.i  index.i  packed-refs.i
.hg/store/data/~2evscode/: settings.json.i
OldTest/: test_bcc.cpp  test_carve3.cpp  test_cd_ga_mrt.cpp  test_pipeflow.cpp
Result/PlateR/: R_1_0.6.out  R_1_0.8.out  R_1_1.2.out  R_1_1.4.out  R_1_1.6.out  R_1_1.out  R_2_0.6.out  R_2_0.8.out  R_2_1.2.out  R_2_1.4.out  R_2_1.6.out  R_2_1.out  R_3_0.8.out  R_3_1.2.out  R_3_1.4.out  R_3_1.6.out  R_3_1.out
Result/Sc/: .~lock.Sum.xlsx#  .~lock.Sum_r.xlsx#  Sum.xlsx  Sum1.xlsx  Sum2.xlsx  Sum3.xlsx  Sum_r.xlsx  Sum_r1.1.xlsx  Sum_r1.xlsx  q_hist.m  show.m  showr.m  showr1.m
Result/Sc/sc_r/: Permeability_1_110_1.6.out  Permeability_1_30_1.6.out  Permeability_1_50_1.6.out  Permeability_1_90_1.6.out  Permeability_2_110_1.6.out  Permeability_2_30_1.6.out  Permeability_2_50_1.6.out  Permeability_2_70_1.6.out  Permeability_3_10_1.6.out  Permeability_3_110_1.6.out  Permeability_3_50_1.6.out  Permeability_3_70_1.6.out  Permeability_3_90_1.6.out  Permeability_4_110_1.6.out  Permeability_4_70_1.6.out  Permeability_4_90_1.6.out  log.txt
Result/Sc/sc_r/1/: Permeability_3_30_1.6.out  Permeability_4_110_1.6.out  Permeability_4_50_1.6.out  Permeability_4_70_1.6.out  Permeability_4_90_1.6.out  (+1 more)
Result/spheres/: Sum_p.xlsx  Sum_p1.xlsx  Sum_r.xlsx  picture.m  show.m
Result/spheres/spheres_r/: Permeability_0_110_1.6.out  Permeability_0_130_1.6.out  Permeability_0_200_1.6.out  Permeability_0_30_1.6.out  Permeability_0_50_1.6.out  Permeability_0_70_1.6.out  Permeability_0_90_1.6.out  Permeability_1_110_1.6.out  Permeability_1_130_1.6.out  Permeability_1_200_1.6.out  Permeability_1_30_1.6.out  Permeability_1_50_1.6.out  Permeability_1_70_1.6.out  Permeability_2_110_1.6.out  Permeability_2_130_1.6.out  Permeability_2_200_1.6.out  Permeability_2_30_1.6.out  Permeability_2_50_1.6.out  Permeability_2_70_1.6.out  Permeability_3_110_1.6.out  Permeability_3_130_1.6.out  Permeability_3_200_1.6.out  Permeability_3_30_1.6.out  Permeability_3_50_1.6.out  Permeability_3_70_1.6.out  Permeability_4_110_1.6.out  Permeability_4_130_1.6.out  Permeability_4_200_1.6.out  Permeability_4_30_1.6.out  Permeability_4_50_1.6.out  Permeability_4_70_1.6.out  log.txt
Result/spheres/spheres_v/: Permeability_0_90_0.8.out  Permeability_0_90_1.2.out  Permeability_0_90_1.4.out  Permeability_0_90_1.8.out  Permeability_0_90_1.out  Permeability_0_90_2.out  Permeability_1_90_0.8.out  Permeability_1_90_1.2.out  Permeability_1_90_1.4.out  Permeability_1_90_1.6.out  Permeability_1_90_1.8.out  Permeability_1_90_1.out  Permeability_1_90_2.out  Permeability_2_90_0.8.out  Permeability_2_90_1.2.out  Permeability_2_90_1.4.out  Permeability_2_90_1.6.out  Permeability_2_90_1.8.out  Permeability_2_90_1.out  Permeability_2_90_2.out  Permeability_3_200_0.8.out  Permeability_3_200_1.2.out  Permeability_3_200_1.4.out  Permeability_3_200_1.8.out  Permeability_3_200_1.out  Permeability_3_200_2.out  Permeability_3_90_0.8.out  Permeability_3_90_1.2.out  Permeability_3_90_1.4.out  Permeability_3_90_1.6.out  Permeability_3_90_1.8.out  Permeability_3_90_1.out  Permeability_3_90_2.out  Permeability_4_90_0.8.out  Permeability_4_90_1.2.out  Permeability_4_90_1.4.out  Permeability_4_90_1.6.out  Permeability_4_90_1.8.out  Permeability_4_90_1.out  Permeability_4_90_2.out  (+1 more)
lbm/: AddSolidBoundary.h  ApplySolidBoundary.h  CalcProps.h  Collide.h  Domain.h  Domain2.h  Feq.h  Initialize.h  Output.h  Stream.h
(+180 files in other folders)
